crates/kdl-config-derive/tests/ui/invalid_render.stderr
error: invalid render placement "nope", expected one of: attr, value, child, children, registry
 --> tests/ui/invalid_render.rs:5:20
  |
5 |     #[kdl(render = "nope")]
  |                    ^^^^^^
